<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/loginPageBackgroundColor"
    tools:context=".VerifyActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:padding="24dp"
        android:paddingTop="16dp">

        <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="48dp"
            android:layout_marginBottom="16dp"
            app:srcCompat="@drawable/logo"
            app:tint="@color/textColorPrimary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="60dp"
            android:text="@string/app_name"
            android:textAllCaps="true"
            android:textSize="16sp"
            android:textAppearance="@style/TextAppearance.Shrine.Title" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:text="@string/verification_title"
            android:textSize="30sp"
            android:textAppearance="@style/TextAppearance.Shrine.Title" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/otp_msg"
            android:textAlignment="center"
            android:paddingBottom="10dp"/>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Shrine.TextInputLayout"
            android:id="@+id/password_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:hint="@string/shr_hint_otp"
            app:errorEnabled="true" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/otp_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Snippet from "Add buttons" section goes here. -->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!--android:id="@+id/buttonSignIn" -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/verify_button"
                style="@style/Widget.Shrine.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:text="@string/shr_button_verify" />



        </RelativeLayout>

    </LinearLayout>
</ScrollView>